@@ -4,9 +4,10 @@ TODO
    menu + main content + footer
 2. Add tests.
 3. Add image of web app to doc.
-4. Jak resit nahravani inplace modulu? package Foo; package main;
 5. Add another example to doc with explicit Tags::HTML example
 6.
 
 Applied
 =======
+4. Jak resit nahravani inplace modulu? package Foo; package main;
+OK [20220512] skim
